compiled/github-actions/manifests/actions-runner-system-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: actions-runner-system
  name: actions-runner-system
