compiled/github-actions/manifests/github-runners-bundle.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: controller-manager
  name: actions-runner-system
---
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: controller-manager
  name: controller-manager-metrics-service
  namespace: actions-runner-system
spec:
  ports:
    - name: https
      port: 8443
      targetPort: https
  selector:
    control-plane: controller-manager
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-service
  namespace: actions-runner-system
spec:
  ports:
    - port: 443
      targetPort: 9443
  selector:
    control-plane: controller-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    control-plane: controller-manager
  name: controller-manager
  namespace: actions-runner-system
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: controller-manager
  template:
    metadata:
      labels:
        control-plane: controller-manager
    spec:
      containers:
        - args:
            - --metrics-addr=127.0.0.1:8080
            - --enable-leader-election
          command:
            - /manager
          image: summerwind/actions-runner-controller:v0.25.2
          name: manager
          ports:
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 20Mi
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
            - mountPath: /etc/actions-runner-controller
              name: controller-manager
              readOnly: true
        - args:
            - --secure-listen-address=0.0.0.0:8443
            - --upstream=http://127.0.0.1:8080/
            - --logtostderr=true
            - --v=10
          image: quay.io/brancz/kube-rbac-proxy:v0.10.0
          name: kube-rbac-proxy
          ports:
            - containerPort: 8443
              name: https
      terminationGracePeriodSeconds: 10
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: webhook-server-cert
        - name: controller-manager
          secret:
            secretName: controller-manager
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: actions-runner-system/serving-cert
  name: mutating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: webhook-service
        namespace: actions-runner-system
        path: /mutate-actions-summerwind-dev-v1alpha1-runner
    failurePolicy: Fail
    name: mutate.runner.actions.summerwind.dev
    rules:
      - apiGroups:
          - actions.summerwind.dev
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - runners
    sideEffects: None
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: webhook-service
        namespace: actions-runner-system
        path: /mutate-actions-summerwind-dev-v1alpha1-runnerdeployment
    failurePolicy: Fail
    name: mutate.runnerdeployment.actions.summerwind.dev
    rules:
      - apiGroups:
          - actions.summerwind.dev
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - runnerdeployments
    sideEffects: None
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: webhook-service
        namespace: actions-runner-system
        path: /mutate-actions-summerwind-dev-v1alpha1-runnerreplicaset
    failurePolicy: Fail
    name: mutate.runnerreplicaset.actions.summerwind.dev
    rules:
      - apiGroups:
          - actions.summerwind.dev
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - runnerreplicasets
    sideEffects: None
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: webhook-service
        namespace: actions-runner-system
        path: /mutate-runner-set-pod
    failurePolicy: Ignore
    name: mutate-runner-pod.webhook.actions.summerwind.dev
    rules:
      - apiGroups:
          - ''
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: actions-runner-system/serving-cert
  name: validating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: webhook-service
        namespace: actions-runner-system
        path: /validate-actions-summerwind-dev-v1alpha1-runner
    failurePolicy: Fail
    name: validate.runner.actions.summerwind.dev
    rules:
      - apiGroups:
          - actions.summerwind.dev
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - runners
    sideEffects: None
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: webhook-service
        namespace: actions-runner-system
        path: /validate-actions-summerwind-dev-v1alpha1-runnerdeployment
    failurePolicy: Fail
    name: validate.runnerdeployment.actions.summerwind.dev
    rules:
      - apiGroups:
          - actions.summerwind.dev
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - runnerdeployments
    sideEffects: None
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: webhook-service
        namespace: actions-runner-system
        path: /validate-actions-summerwind-dev-v1alpha1-runnerreplicaset
    failurePolicy: Fail
    name: validate.runnerreplicaset.actions.summerwind.dev
    rules:
      - apiGroups:
          - actions.summerwind.dev
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - runnerreplicasets
    sideEffects: None
